
=======================================================
		WanT code:  Log of Changes 
=======================================================


13 Apr 2012     midpoint.f90 generalized to deal with lower bound cutoff. (AF)

23 Feb 2012     qexml.f90 changed to allow postprocessing of CP runs. 
		Inclusion of magma libs started. (AF)

10 Feb 2012     CUDA implementation compiling and running, but still crashing. (AF)

01 Feb 2012     branch for version 2.4.0 started (v2.4.0 almost release compliant).
		version number in trunk changed to 2.5.0_alpha1 . Inclusion of
		phiGEMM (CUDA and GPU) started (thanks also to Filippo Spiga). 
		conf/ directory renamed to config. (AF)

-------------------------------------------------
Date: 01 Feb 2012    Version: WanT-2.4.0
-------------------------------------------------

Jan 30 2012     util.f90 updated; some calls to utile wrappers renamed. (AF)

Jan 10 2012     bug fixed in libs/files.f90 (tags pointer was not nullified). (AF)

Nov 25 2011     sax2qexml implementation completed (gkvectors re-written). (AF)

Nov 07 2011     sax2qexml utilities added. Bug fixed in qexml_write_wfc.
		c_mkdir updated to c_mkdir_int (QE-4.3). (AF)

Nov 02 2011     bug fixed in util.f90 in zmat_diag (the input matrix is
		overwritten). Courtesy of Eleonora Luppi. (AF)

Oct 14 2011     operator_module updated; sum_sgm.x tool added to utility. (AF)

Oct 12 2011     version number changed to 2.4.0beta1 . decay.x utility added.
		memstat.c routine removed. (AF)

Oct 11 2011     datafile_urot input var added to blc2wan, to allow for and extra
		unitary rotation to be plugged in. do_cmplxconjg var added to fix
		an old bug in SaX. (AF)

Apr 19 2011     memusage routines added to transport and embed. 
		Problem with ne_buffer fixed (wasn't it already). (AF)

Mar 17 2011     150th anniversary of unified Italy. FOund and fixed a bug showing up
		when damping to file lead-self-energies or conductor green's functions: